# LongArithmetic

./: .gitignore  CMakeLists.txt  README.md  calculator.cpp  long_number.cpp  long_number.hpp  main  main.cpp  pi.cpp
exe/: calculator.cpp  pi.cpp
include/: exceptions.hpp  long_number.hpp  utils.hpp
lib/: long_number.cpp  long_number.hpp  utils.hpp
src/: exceptions.cpp  long_number.cpp  utils.cpp
test/: number_test.cpp  pi_test.cpp
